venue top block

--- a/app/views/home/venues.html.haml
+++ b/app/views/home/venues.html.haml
@@ -15,14 +15,14 @@
 
 .col-2
   .section
-    .container.dark
+    .container.skin-dark
       .body
         .media-with-info.large
           .media
             = image_tag('http://dummyimage.com/160x160/000/fff')
           .info
             %h4 Barbez
-            %address  375 9th St, 11216, Park Slope, Brooklyn
+            %address.mb10  375 9th St, 11216, Park Slope, Brooklyn
             %dl
               %dt Music every night:
               %dd Yes
@@ -40,12 +40,12 @@
   .section
     .container
       .body
-        %h3 Their words:
+        %h3.snug Their words:
         %p Owned and operated by two French musicians and long-time Brooklyn residents, BarbËs functions as a neighborhood community center of sorts. Much like the neighborhood it is named after, Barbes puts the stress on cultural variety, neighborhood conviviality - and bargain hunting , with $6 Ricard and an eclectic music collection which ranges from the Lebanese diva Asmahan to Mexican bandas, Venezuelan joropos and Romanian brass bands. Our performance space in our intimate back room, is host to regular events - music, readings and film screenings (see our calendar page) and fills a gap in a neighborhood which is home to a large population of artists, musicians, and writers but still offers little in terms of performing outlets. 
   .section
     .container
       .body
-        %h3 Our words:
+        %h3.snug Our words:
         %p Home to residencies of the Balkan dance band Slavic Soul Party andviolin master Jenny Scheinmann, Barbes is a venue where you’re often wondering “shouldn’t these folks be playing a bigger room?” It’s a perfectly intimate back room of a bar in Park Slope and the calendar is always stocked with two great shows per night. WFMU DJ Bethany Ryker has been curating Wednesdays the past few months with greatly eclectic bills, pairing bassist Todd Sickafoose’s Blood Orange band with New Hampshire Dirty Projectors affiliate Nat Baldwin, an upright bassist and a great songwriter. It is definitely worth going to Barbes any night of the week just to see what’s being offered, and with no drink minimum and many times the cover being donation, you can pay what you want, and have a great time. 
         
   .section
