--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -27,6 +27,16 @@ ul {
   margin: 0;
   padding: 0;
 }
+address {
+  color: #666;
+  font-style: normal;
+}
+h4 {
+  margin-bottom: 0;
+  font-weight: normal;
+  font-size: 12px;
+  text-transform: uppercase;
+}
 #logo {
   position: absolute;
   top: 35px;
