--- a/public/stylesheets/sass/components/lists.scss
+++ b/public/stylesheets/sass/components/lists.scss
@@ -40,4 +40,22 @@
       }
     }
   }
+  dl {
+    overflow: hidden;
+    margin: 0 0 5px 0;
+    dd, dt {float: left;}
+    dt {
+      font-size: 14px;
+      font-weight: bold;
+      color: $ORANGE;
+      padding-right: 5px;
+      clear: both;
+    }
+    dd {
+      color: #ccc;
+      font-size: 12px;
+      margin: 0px;
+      line-height: 18px;
+    }
+  }
 }
