starts video landing markup

--- a/app/views/home/artists_landing.html.haml
+++ b/app/views/home/artists_landing.html.haml
@@ -26,4 +26,4 @@
           = image_tag('http://dummyimage.com/140x140/000/fff')
           .clear
           %span.box.block.name{:href => '#'} Pete Robbins
-          %p.instrument Alto Saxophone
+          %p.byline Alto Saxophone
