--- a/app/views/home/venues.html.haml
+++ b/app/views/home/venues.html.haml
@@ -61,4 +61,4 @@
               = image_tag('http://dummyimage.com/140x77/000/fff')
               .clear
               %span.box.block.name{:href => '#'} Val Shaffer Quartet
-              %p.instrument 03/31/2011, Tea Lounge 
+              %p.byline 03/31/2011, Tea Lounge 
