--- a/public/stylesheets/sass/components/lists.scss
+++ b/public/stylesheets/sass/components/lists.scss
@@ -20,7 +20,7 @@
     &.grid-view {
       li {
         margin-right: 10px;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
         &.last {
           margin-right: 0px;
         } 
@@ -32,7 +32,7 @@
           .name {
             margin-bottom: 2px;
           }
-          .instrument {
+          .byline {
             margin-bottom: 0px;
             padding-left: 5px;
           }
