--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -159,6 +159,15 @@
 .jazz.page-artists-landing label {
   margin-right: 3px; }
 
+.jazz.page-about #recent-press .byline {
+  margin-bottom: 2px; }
+  .jazz.page-about #recent-press .byline .date {
+    color: #666; }
+  .jazz.page-about #recent-press .byline .author {
+    color: #ccc; }
+.jazz.page-about #recent-press li {
+  margin-bottom: 6px; }
+
 .jazz .mt1 {
   margin-top: 1px !important; }
 .jazz .mt5 {
