--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -7,6 +7,7 @@ $ORANGE: #ff9900;
 @import "components/headers";
 @import "components/layout";
 @import "pages/artists";
+@import "pages/about";
 
 .jazz {
   @include margins();
