--- a/public/stylesheets/components/layout.css
+++ b/public/stylesheets/components/layout.css
@@ -1,6 +1,9 @@
 .jazz .col-1,
 .jazz .col-2,
-.jazz .col-3 {
+.jazz .col-3,
+.jazz .col-4,
+.jazz .col-5,
+.jazz .col-6 {
   float: left; }
 .jazz.layout-1 .col-1 {
   width: 310px;
@@ -14,6 +17,16 @@
 .jazz.layout-2 .col-1,
 .jazz.layout-2 .col-2 {
   margin-right: 10px; }
+.jazz.layout-3 .col-1,
+.jazz.layout-3 .col-2,
+.jazz.layout-3 .col-3,
+.jazz.layout-3 .col-4,
+.jazz.layout-3 .col-5,
+.jazz.layout-3 .col-6 {
+  width: 135px;
+  margin-right: 30px; }
+.jazz.layout-3 .col-6 {
+  margin-right: 0px; }
 .jazz .section {
   clear: both;
   margin-bottom: 5px; }
