adds basic gmap code

--- a/app/views/home/venues.html.haml
+++ b/app/views/home/venues.html.haml
@@ -4,6 +4,8 @@
   .section
     .box.dark Search Venues
   .section
+    #map_canvas{:style => "width: 310px; height: 387px"}
+    
     Map!
   .section.snug
     .container.dark
