--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,11 @@
     = stylesheet_link_tag 'base'
     = csrf_meta_tag
 
-  %body.jazz{:class => @page_class}
+  - body_attributes = {:class => @page_class}
+  - if @uses_gmap
+    -  body_attributes.merge!({:onload => 'initialize();',:onunload => 'GUnload();'})
+
+  %body.jazz{body_attributes}
   
     - if flash[:notice]
       .flash#notice
@@ -41,4 +45,13 @@
       = yield
 
     = javascript_include_tag ['jquery-5.1.min.js']
+
+    - if @uses_gmap
+      %script{:src => "http://maps.google.com/maps?file=api&v=2&key=#{config.GMAP_KEY}&sensor=true_or_false"}
   
+      :javascript
+        var map = new GMap2(document.getElementById("map_canvas"));
+        map.setCenter(new GLatLng(37.4419, -122.1419), 13);
+        map.setUIToDefault();
+      
+      
