hooks nav up to mocks

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,17 +28,17 @@
           %li
             %a{:href => '#'} Home
           %li.selected
-            %a{:href => '#'} Shows
+            %a{:href => '/home/shows'} Shows
           %li
-            %a{:href => '#'} Artists
+            %a{:href => '/home/artists_landing'} Artists
           %li
-            %a{:href => '#'} Venues
+            %a{:href => '/home/venues'} Venues
           %li
-            %a{:href => '#'} Video
+            %a{:href => '/home/video_landing'} Video
           %li
-            %a{:href => '#'} About
+            %a{:href => '/home/about'} About
           %li
-            %a{:href => '#'} Resources
+            %a{:href => '/home/resources'} Resources
           %li
             %a{:href => '#'} Donate
     .site-container#main-content
