--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -47,7 +47,7 @@
     = javascript_include_tag ['jquery-5.1.min.js']
 
     - if @uses_gmap
-      %script{:src => "http://maps.google.com/maps?file=api&v=2&key=#{config.GMAP_KEY}&sensor=false"}
+      %script{:src => "http://maps.google.com/maps?file=api&v=2&key=#{GMAP_KEY}&sensor=false"}
   
       :javascript
         var map = new GMap2(document.getElementById("map_canvas"));
