--- a/app/views/home/shows.html.haml
+++ b/app/views/home/shows.html.haml
@@ -10,8 +10,7 @@
         = f.label :venue
         = f.select :venue, ['One','Two','Three']
       .field.calendar
-        = f.label :date
-        Calendar
+        #datepicker
 
   .container.skin-dark
     .body
