--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,8 @@
   %head
     %title Searchandrestore
     = stylesheet_link_tag 'base'
+    - if @uses_datepicker
+      = stylesheet_link_tag 'jquery_ui'
     = csrf_meta_tag
 
   - body_attributes = {:class => @page_class}
@@ -44,7 +46,7 @@
     .site-container#main-content
       = yield
 
-    = javascript_include_tag ['jquery-5.1.min.js']
+    = javascript_include_tag ['jquery-5.1.min.js', 'jquery-ui-1.8.13.custom.min.js']
 
     - if @uses_gmap
       %script{:src => "http://maps.google.com/maps?file=api&v=2&key=#{GMAP_KEY}&sensor=false"}
@@ -53,5 +55,11 @@
         var map = new GMap2(document.getElementById("map_canvas"));
         map.setCenter(new GLatLng(37.4419, -122.1419), 13);
         map.setUIToDefault();
-      
-      
+
+    - if @uses_datepicker
+      :javascript
+        $(function() {
+          $('#datepicker').datepicker({
+            inline: true
+          });
+        });
