adds header with meta list

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -37,7 +37,7 @@
   .container.skin-dark
     .body
       %h3 Recent Press:
-      %ul#recent-press
+      %ul.header-meta-list
         - 5.times do |t|
           %li
             %h4 The New York Times
