--- a/public/stylesheets/sass/components/headers.scss
+++ b/public/stylesheets/sass/components/headers.scss
@@ -9,4 +9,12 @@
     font-weight: bold;
     margin-bottom: 5px;
   }
+  h3.box-header {
+    background-color: $ORANGE;
+    color: #fff;
+    font-size: 12px;
+    line-height: 13px;
+    padding: 8px;
+    text-transform: uppercase;
+  }
 }
