--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -8,6 +8,7 @@ $ORANGE: #ff9900;
 @import "components/layout";
 @import "pages/artists";
 @import "pages/about";
+@import "pages/shows";
 
 .jazz {
   @include margins();
