--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -9,6 +9,7 @@ $ORANGE: #ff9900;
 @import "pages/artists";
 @import "pages/about";
 @import "pages/shows";
+@import "pages/donate";
 
 .jazz {
   @include margins();
