--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -65,6 +65,16 @@
     padding: 10px; }
   .jazz .container.skin-dark {
     background-color: #000; }
+  .jazz .container.with-tip {
+    overflow: visible;
+    position: relative; }
+  .jazz .container .tip {
+    width: 41px;
+    height: 37px;
+    position: absolute;
+    bottom: -31px;
+    right: 100px;
+    background: url(/images/tip.png) no-repeat top left; }
 
 .jazz ul.containers li {
   margin-bottom: 6px; }
