--- a/public/stylesheets/sass/components/containers.scss
+++ b/public/stylesheets/sass/components/containers.scss
@@ -8,5 +8,17 @@
     &.skin-dark {
       background-color: #000;
     }
+    &.with-tip {
+      overflow: visible;
+      position: relative;
+    }
+    .tip {
+      width: 41px;
+      height: 37px;
+      position: absolute;
+      bottom: -31px;
+      right: 100px;
+      background: url(/images/tip.png) no-repeat top left;
+    }
   }
 }
