--- a/app/views/home/donate.html.haml
+++ b/app/views/home/donate.html.haml
@@ -2,10 +2,11 @@
 .col-1
   %h3.box-header.centered 
     %a{:href => '#'} Click Here to Donate to Search&amp;Restore via PayPal
-  .container
+  .container.with-tip
     .body
       %h3.box.dark About Search&amp;Restore
       %p.snug We are a 501(c)3 non-profit organization dedicated to uniting and developing the audience for new jazz music. If you'd like to make a tax deductible contribution, please donate below. We've got a lot of big things in the works, so sign up for our email list to find out more. 
+    .tip
 .col-2
 .clear
 
