--- a/app/views/home/venues_landing.html.haml
+++ b/app/views/home/venues_landing.html.haml
@@ -2,8 +2,8 @@
 
 .col-1
   .container
-    .body
-      #map_canvas{:style => "width: 457px; height: 528px"}
+    .body{:style => 'padding: 6px;'}
+      #map_canvas{:style => "width: 457px; height: 560px"}
 .col-2
   %ul.inline-list.grid-view
     - 9.times do |t|
