starts video page

--- a/app/views/home/artists_landing.html.haml
+++ b/app/views/home/artists_landing.html.haml
@@ -21,7 +21,7 @@
 %ul.inline-list.grid-view
   - 18.times do |t|
     %li.container{:class => cycle('first','','','','','last')}
-      %a.block{:href => '#'}
+      %a.block{:href => '/home/artists'}
         .body
           = image_tag('http://dummyimage.com/140x140/000/fff')
           .clear
