--- a/app/views/home/venues_landing.html.haml
+++ b/app/views/home/venues_landing.html.haml
@@ -8,7 +8,7 @@
   %ul.inline-list.grid-view
     - 9.times do |t|
       %li.container{:class => cycle('first','','last')}
-        %a.block{:href => '#'}
+        %a.block{:href => '/home/venues'}
           .body
             = image_tag('http://dummyimage.com/140x140/000/fff')
             .clear
