--- a/app/views/home/video_landing.html.haml
+++ b/app/views/home/video_landing.html.haml
@@ -3,10 +3,10 @@
 %ul.inline-list.grid-view
   - 18.times do |t|
     %li.container{:class => cycle('first','','','','','last')}
-      %a.block{:href => '#'}
+      %a.block{:href => '/home/video'}
         .body
           = image_tag('http://dummyimage.com/140x75/000/fff')
           .clear
-          %span.box.block.name{:href => '#'} Pete Robbins
+          %span.box.block.name Pete Robbins
           %p.byline Alto Saxophone
 
