--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,7 @@
           %li#nav-artists
             %a{:href => '/home/artists_landing'} Artists
           %li#nav-venues
-            %a{:href => '/home/venues'} Venues
+            %a{:href => '/home/venues_landing'} Venues
           %li#nav-video
             %a{:href => '/home/video_landing'} Video
           %li#nav-about
@@ -42,7 +42,7 @@
           %li#nav-resources
             %a{:href => '/home/resources'} Resources
           %li#nav-donate
-            %a{:href => '#'} Donate
+            %a{:href => '/home/donate'} Donate
     .site-container#main-content
       = yield
 
