--- a/app/views/home/video.html.haml
+++ b/app/views/home/video.html.haml
@@ -12,7 +12,7 @@
   .section
     .container
       .body
-        = image_tag('/images/fpo/video.png')
+        <iframe src="http://player.vimeo.com/video/14015287?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="621" height="350" frameborder="0"></iframe>
         %p
           %a.box.dark{:href => '#'} Transatlantic Quartet
           03/31/2011 Tea Lounge, Brooklyn
@@ -39,4 +39,3 @@
               .clear
               %span.box.block.name{:href => '#'} Trans-Atlantic Quartet
               %p.location.snug 10/27/4000, Tea Lounge
-
