--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -51,27 +51,57 @@
       
 
     - if @uses_gmap
-      %script{:src => "http://maps.google.com/maps?file=api&v=2&key=#{GMAP_KEY}&sensor=false"}
+      -# GMAP_KEY
+      %script{:src => "http://maps.google.com/maps/api/js?sensor=false"}
   
       :javascript
-        var map = null;
-        if (GBrowserIsCompatible()) {
-            map = new GMap2(document.getElementById('map_canvas'));
-            map.setUIToDefault();
-            var geocoder = new GClientGeocoder();
-            var address = "75 9th St, 11216, Brooklyn, NY";
-            geocoder.getLatLng(
-                address,
-                function(point) {
-                  if (!point) {
-                    return;
-                  }
-                  map.setCenter(point, 13);
-                  marker = new GMarker(point);
-                  map.addOverlay(marker);
-                }
-            );
-        }    
+        function initialize() {
+          var latlng = new google.maps.LatLng(40.724001, -73.992837);
+          var myOptions = {
+            zoom: 12,
+            center: latlng,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+          };
+          var map = new google.maps.Map(document.getElementById("map_canvas"),
+              myOptions);
+          
+          var coords = [
+            {lat:40.724001, lng:-73.992837},
+            {lng:-74.000692, lat:40.726422}
+          ];
+
+          $(coords).each(function(c, coord) {
+            var marker = new google.maps.Marker({
+                  position: new google.maps.LatLng(coord.lat,coord.lng),
+                  title:"Hello World!"
+            });
+            
+            // To add the marker to the map, call setMap();
+            marker.setMap(map);  
+          });
+          
+        }
+        
+        //40.724001, -73.992837
+        //-74.000692 40.726422 
+        //var map = null;
+        //if (GBrowserIsCompatible()) {
+        //    map = new GMap2(document.getElementById('map_canvas'));
+        //    map.setUIToDefault();
+        //    var geocoder = new GClientGeocoder();
+        //    var address = "75 9th St, 11216, Brooklyn, NY";
+        //    geocoder.getLatLng(
+        //        address,
+        //        function(point) {
+        //          if (!point) {
+        //            return;
+        //          }
+        //          map.setCenter(point, 13);
+        //          marker = new GMarker(point);
+        //          map.addOverlay(marker);
+        //        }
+        //    );
+        //}    
 
     - if @uses_datepicker
       :javascript
