adds shows title

--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -57,6 +57,9 @@ h4 {
 }
 .masthead-top {
   height: 126px;
+  background-image: url(/images/titles/shows_title.png);
+  background-repeat: no-repeat;
+  background-position: 54px 5px;
 }
 
 .site-container {
