--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -484,7 +484,10 @@ h4 {
     position: relative; }
 
 .masthead-top {
-  height: 126px; }
+  height: 126px;
+  background-image: url(/images/titles/shows_title.png);
+  background-repeat: no-repeat;
+  background-position: 78px 5px; }
 
 .site-container {
   width: 960px;
