adds page title graphics.  nav should be highlighted properly everywhere

--- a/app/views/home/artists_landing.html.haml
+++ b/app/views/home/artists_landing.html.haml
@@ -1,4 +1,4 @@
-- @page_class = 'page-artists-landing'
+- @page_class = 'section-artists page-index'
 
 .floatleft#search-by-name.mr10
   - form_for :blah do |f|
