--- a/public/stylesheets/pages/about.css
+++ b/public/stylesheets/pages/about.css
@@ -1,3 +1,5 @@
+.jazz.page-about .masthead-top {
+  background-image: url(/images/titles/about_title.png); }
 .jazz.page-about #recent-press .byline {
   margin-bottom: 2px; }
   .jazz.page-about #recent-press .byline .date {
