--- a/public/stylesheets/pages/donate.css
+++ b/public/stylesheets/pages/donate.css
@@ -1,3 +1,5 @@
+.jazz.page-donate .masthead-top {
+  background-image: url(/images/titles/donate_title.png); }
 .jazz.page-donate #main-content {
   height: 543px;
   background: url(/images/rats.png) no-repeat top left; }
