changes body class on artist pages.  shop links styled

--- a/app/views/artists/index.html.haml
+++ b/app/views/artists/index.html.haml
@@ -1,4 +1,4 @@
-- @page_class = 'page-artists-landing'
+- @page_class = 'section-artists page-index'
 
 .floatleft.mr10
   = form_for @artists, :url => artists_path, :html => { :method => :get } do |f|
