--- a/app/views/artists/show.html.haml
+++ b/app/views/artists/show.html.haml
@@ -1,4 +1,4 @@
-- @page_class = 'layout-1 page-artists'
+- @page_class = 'layout-1 section-artists page-show'
 
 .col-1
   #info.section
@@ -13,7 +13,7 @@
             #bio= simple_format(sanitize(@artist.bio))
         %a.box{:href => '#'} Read More
         %a.box{:href => '#'} Visit artists website
-  #bio.section
+  #shop.section
     .container.skin-dark
       .body
         %h3 Shop for tunes by this artist:
