--- a/public/stylesheets/sass/pages/artists.scss
+++ b/public/stylesheets/sass/pages/artists.scss
@@ -16,6 +16,19 @@
       }
 
     }
+    &.page-show {
+      #shop {
+        ul.inline-list {
+          li {
+            margin-right: 10px;
+            a {
+              display: block;
+              width: 69px;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
