--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -210,6 +210,11 @@
   width: 200px; }
 .jazz.section-artists.page-index label {
   margin-right: 3px; }
+.jazz.section-artists.page-show #shop ul.inline-list li {
+  margin-right: 10px; }
+  .jazz.section-artists.page-show #shop ul.inline-list li a {
+    display: block;
+    width: 69px; }
 
 .jazz.page-about .masthead-top {
   background-image: url(/images/titles/about_title.png); }
