links nav to artists landing page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,7 @@
           %li#nav-shows
             %a{:href => '/home/shows'} Shows
           %li#nav-artists
-            %a{:href => '/home/artists_landing'} Artists
+            = link_to('Artists', artists_url)
           %li#nav-venues
             %a{:href => '/home/venues_landing'} Venues
           %li#nav-video
